Move to literate config

--- a/emacs/doom.d/config.org
+++ b/emacs/doom.d/config.org
@@ -1,3 +1,6 @@
+* Doom emacs configuration
+** Basic configuration
+#+BEGIN_SRC emacs-lisp
 (setq
  doom-localleader-key ","
  user-full-name "Lukasz Czaplinski"
@@ -6,10 +9,14 @@
  display-line-numbers-type t)
 
 (add-hook 'prog-mode-hook #'turn-on-visual-line-mode)
-
+#+END_SRC
+** macOS
+#+BEGIN_SRC emacs-lisp
 (setq ns-right-alternate-modifier 'none)
 (setq mac-right-option-modifier nil)
-
+#+END_SRC
+** Global keymap
+#+BEGIN_SRC emacs-lisp
 (map!
  "M-:" #'avy-goto-word-1
  "M-'" #'+eshell/toggle)
@@ -36,16 +43,24 @@
 (map! :leader
       :prefix "k"
       )
-
+#+END_SRC
+** Packages
+*** Surround for manipulating brackets
+#+BEGIN_SRC emacs-lisp
 (use-package! evil-surround
   :config
     (global-evil-surround-mode 1))
+#+END_SRC
+** Swiper more like spacemacs
+#+BEGIN_SRC emacs-lisp
 
 (after! swiper
   (define-key swiper-map (kbd "ESC") #'keyboard-quit)
   (define-key swiper-map (kbd "C-j") #'ivy-next-line)
   (define-key swiper-map (kbd "C-k") #'ivy-previous-line))
-
+#+END_SRC
+** org
+#+BEGIN_SRC emacs-lisp
 (setq org-directory "~/org/"
       org-archive-location (concat org-directory "archive/%s::")
       org-ellipsis " ▼ "
@@ -85,10 +100,14 @@
       :map org-mode-map
       :desc "dwim" "C-M-x" #'+org/dwim-at-point
       :desc "toggle folds" "TAB" #'org-cycle)
-
+#+END_SRC
+** magit
+#+BEGIN_SRC emacs-lisp
 (setq magit-repository-directories '(("~/Documents" . 2))
       magit-save-repository-buffers nil)
-
+#+END_SRC
+** Puppet
+#+BEGIN_SRC emacs-lisp
 (map!
  :map puppet-mode-map
  :after puppet-mode
@@ -96,13 +115,17 @@
  :desc "Align block" "b" #'puppet-align-block
  :desc "Align class params" "p" #'scoiatael/puppet-align-parameters
  :desc "Toggle string quotes" "'" #'puppet-toggle-string-quotes)
-
+#+END_SRC
+** direnv
+#+BEGIN_SRC emacs-lisp
 (map!
  :map direnv-envrc-mode-map
  :after direnv
  :localleader
  :desc "Allow envrc" "a" #'direnv-allow)
-
+#+END_SRC
+** DAP
+#+BEGIN_SRC emacs-lisp
 (use-package! dap-mode
   :after lsp-mode
   :preface
@@ -118,11 +141,15 @@
   (add-hook 'dap-stopped-hook
             (lambda (_arg) (call-interactively #'dap-ui-repl)))
   )
-
+#+END_SRC
+** Python
+#+BEGIN_SRC emacs-lisp
 (setq python-shell-interpreter "python")
 (setq lsp-python-ms-python-executable-cmd "python")
 (add-hook #'python-mode-hook #'scoiatael/maybe-activate-virtualenv)
-
+#+END_SRC
+*** DAP integration
+#+BEGIN_SRC emacs-lisp
 (after! dap-mode
   (dap-register-debug-template
    "Python :: pytest focus"
@@ -133,7 +160,9 @@
          :module "pytest"
          :request "launch"
          :name "Python :: pytest focus")))
-
+#+END_SRC
+*** Keymap
+#+BEGIN_SRC emacs-lisp
 (map! :after python
       :map python-mode-map
       :localleader
@@ -147,12 +176,20 @@
       :desc "Show locals" "l" #'dap-ui-locals
       :prefix "i"
       :desc "Remove obsolete imports" "d" #'scoiatael/python-remove-unused-imports)
-
+#+END_SRC
+** Rust
+#+BEGIN_SRC emacs-lisp
 (setq lsp-rust-server 'rust-analyzer)
 (setq rustic-analyzer-command (concat doom-etc-dir "lsp/rust-analyzer" ))
-
+#+END_SRC
+** web mode
+read engine from comment in first line of file
+#+BEGIN_SRC emacs-lisp
 (setq web-mode-enable-engine-detection 't)
-
+#+END_SRC
+** github-flavored markdown
+often leaves trailing whitespace around -> show it!
+#+BEGIN_SRC emacs-lisp
 (add-hook! #'gfm-mode #'scoiatael/visualize-trailing-whitespace)
 
 (defun scoiatael/visualize-trailing-whitespace ()
@@ -160,10 +197,19 @@
   (interactive)
   (setq whitespace-style '(face trailing))
   (whitespace-turn-on))
-
+#+END_SRC
+** custom personal snippets
+#+BEGIN_SRC emacs-lisp
 (setq! +snippets-dir "~/dotfiles/emacs/snippets")
-
+#+END_SRC
+** org-roam for personal wiki
+#+BEGIN_SRC emacs-lisp
 (add-hook 'after-init-hook 'org-roam-mode)
 (setq org-roam-completion-system 'ivy)
-
+#+END_SRC
+** custom configuration
+on each machine I have little snippet to customize per this specific machine
+e.g. set work email
+#+BEGIN_SRC emacs-lisp
 (load-file (expand-file-name "./custom.el" (dir!)))
+#+END_SRC
