--- a/platform-specific/nixos/configuration.org
+++ b/platform-specific/nixos/configuration.org
@@ -1,17 +1,63 @@
-# Edit this configuration file to define what should be installed on
-# your system.  Help is available in the configuration.nix(5) man page
-# and in the NixOS manual (accessible by running ‘nixos-help’).
-
+:CONFIG:
+#+startup: indent
+:END:
+* ~configuration.nix~
+:PROPERTIES:
+:header-args:nix: :tangle "/su::/etc/nixos/configuration.nix"  :mkdirp yes :comments no
+:header-args: :mkdirp yes :comments no
+:END:
+** preamble
+#+begin_src nix
 { config, lib, pkgs, ... }:
 
-{
+let
+# bash script to let dbus know about important env variables and
+# propogate them to relevent services run at the end of sway config
+# see
+# https://github.com/emersion/xdg-desktop-portal-wlr/wiki/"It-doesn't-work"-Troubleshooting-Checklist
+# note: this is pretty much the same as  /etc/sway/config.d/nixos.conf but also restarts
+# some user services to make sure they have the correct environment variables
+dbus-sway-environment = pkgs.writeTextFile {
+  name = "dbus-sway-environment";
+  destination = "/bin/dbus-sway-environment";
+  executable = true;
+
+  text = ''
+  dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+  systemctl --user stop pipewire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr
+  systemctl --user start pipewire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr
+      '';
+};
+
+# currently, there is some friction between sway and gtk:
+# https://github.com/swaywm/sway/wiki/GTK-3-settings-on-Wayland
+# the suggested way to set gtk settings is with gsettings
+# for gsettings to work, we need to tell it where the schemas are
+# using the XDG_DATA_DIR environment variable
+# run at the end of sway config
+configure-gtk = pkgs.writeTextFile {
+  name = "configure-gtk";
+  destination = "/bin/configure-gtk";
+  executable = true;
+  text = let
+    schema = pkgs.gsettings-desktop-schemas;
+    datadir = "${schema}/share/gsettings-schemas/${schema.name}";
+  in ''
+        export XDG_DATA_DIRS=${datadir}:$XDG_DATA_DIRS
+        gnome_schema=org.gnome.desktop.interface
+        gsettings set $gnome_schema gtk-theme 'Dracula'
+        '';
+};
+in {
   imports =
     [ # Include the results of the hardware scan.
       ./hardware-configuration.nix
     ];
-
+#+end_src
+** boot
+#+begin_src nix
   # Use the systemd-boot EFI boot loader.
-  boot.loader.systemd-boot.enable = true;
+  boot.loader.systemd-boot.enable = false;
   boot.loader.efi.canTouchEfiVariables = true;
   boot.loader.grub = {
       enable = true;
@@ -24,7 +70,10 @@
   boot.kernelPackages = pkgs.linuxPackages_latest;
   boot.kernelParams = [ "mem_sleep_default=deep" ];
   boot.kernel.sysctl."net.core.rmem_max" = 2500000;
+#+end_src
 
+** doas instead of sudo
+#+begin_src nix
   security.sudo.enable = false;
   security.doas = {
     enable = true;
@@ -36,6 +85,11 @@
     }];
   };
 
+#+end_src
+
+** docker w/ user-ns remap
+TODO: 22.05 introduced native support, no need to roll own user :)
+#+begin_src nix
   # https://rdes.gitlab.io/posts/2016-08-29-enabling-dockers-user-namespaces-in-nixos.html
   virtualisation.docker = {
     enable = true;
@@ -53,9 +107,16 @@
       { startGid = 100000; count = 65536; }
     ];
   };
+ #+end_src
+
+** shells
+#+begin_src nix
   users.extraUsers.root.shell = pkgs.bash;
   users.defaultUserShell = pkgs.zsh;
+#+end_src
 
+** networking
+#+begin_src nix
   networking.hostName = "r-work-nixos"; # Define your hostname.
   # networking.wireless.enable = true;  # Enables wireless support via wpa_supplicant.
   # networking.wireless.userControlled.enable = true;
@@ -74,25 +135,52 @@
   # networking.proxy.default = "http://user:password@proxy:port/";
   # networking.proxy.noProxy = "127.0.0.1,localhost,internal.domain";
 
+  # Open ports in the firewall.
+  networking.firewall = {
+    allowedTCPPorts = [
+       6001 # shairport
+       631 # avahi
+       ];
+
+    allowedUDPPortRanges = [
+      { from = 6001; to = 6199; } # shairport
+    ];
+
+    allowedUDPPorts = [
+      5353 # avahi
+      631 # avahi
+    ];
+  };
+  # Or disable the firewall altogether.
+  # networking.firewall.enable = false;
+
   # Select internationalisation properties.
-  # i18n.defaultLocale = "en_US.UTF-8";
+  i18n.defaultLocale = "en_GB.UTF-8";
   # console = {
   #   font = "Lat2-Terminus16";
   #   keyMap = "us";
   # };
+#+end_src
+** services
+#+begin_src nix
+  # List services that you want to enable:
 
-  # Enable the X11 windowing system.
-  services.xserver.enable = true;
+  # https://nixos.wiki/wiki/Yubikey
+  services.udev.packages = [ pkgs.yubikey-personalization ];
 
+  services.pcscd.enable = true;
 
-  # Enable the Plasma 5 Desktop Environment.
-  services.xserver.displayManager.sddm.enable = true;
-  services.xserver.desktopManager.plasma5.enable = true;
-  
+  services.keybase.enable = true;
 
-  # Configure keymap in X11
-  services.xserver.layout = "pl";
-  services.xserver.xkbOptions = "caps:escape";
+  # Enable the OpenSSH daemon.
+  # services.openssh.enable = true;
+
+  services.clamav = {
+    daemon.enable = true;
+    updater.enable = true;
+  };
+
+  services.thermald.enable = true;
 
   # Enable CUPS to print documents.
   services.printing.enable = true;
@@ -101,14 +189,58 @@
   sound.enable = true;
   hardware.pulseaudio.enable = true;
 
-  # Enable touchpad support (enabled default in most desktopManager).
-  services.xserver.libinput.enable = true;
-
   # https://nixos.wiki/wiki/Printing - for shairport
   services.avahi.enable = true;
   services.avahi.publish.enable = true;
   services.avahi.publish.userServices = true;
 
+  # https://wiki.archlinux.org/title/Solid_state_drive
+  services.fstrim.enable = true;
+#+end_src
+
+** Windowing system
+#+begin_src nix
+  # Enable the X11 windowing system.
+  services.xserver = {
+    enable = true;
+    videoDrivers = [ "xf86videointel" ];
+    modules = [ pkgs.xf86_input_wacom ];
+    # Configure keymap in X11
+    layout = "pl";
+    xkbOptions = "caps:escape";
+    # Enable touchpad support (enabled default in most desktopManager).
+    libinput.enable = true;
+  };
+#+end_src
+*** Plasma + SDDM
+#+begin_src nix
+  # Enable the Plasma 5 Desktop Environment.
+  services.xserver.displayManager.sddm.enable = true;
+  services.xserver.desktopManager.plasma5.enable = true;
+#+end_src
+*** Sway
+https://nixos.wiki/wiki/Sway
+https://github.com/NixOS/nixpkgs/blob/master/nixos/modules/programs/sway.nix
+#+begin_src nix
+programs.sway = {
+    enable = true;
+    wrapperFeatures.gtk = true;
+};
+
+# https://nixos.wiki/wiki/GNOME
+programs.dconf.enable = true;
+
+
+xdg.portal = {
+  enable = true;
+  wlr.enable = true;
+  # gtk portal needed to make gtk apps happy
+  extraPortals = [ pkgs.xdg-desktop-portal-gtk ];
+  gtkUsePortal = true;
+};
+#+end_src
+** users
+#+begin_src nix
   # Define a user account. Don't forget to set a password with ‘passwd’.
   users.users.lczaplinski = {
     isNormalUser = true;
@@ -133,33 +265,31 @@
   system.activationScripts.shareHome = lib.stringAfter [ "users" ] ''
     chmod g+rwx /home/lczaplinski
   '';
+#+end_src
 
+** system packages
+#+begin_src nix
   # List packages installed in system profile. To search, run:
   # $ nix search wget
   environment.systemPackages = (with pkgs; [
     wget
     firefox
+    librewolf-wayland
     yakuake
     yubioath-desktop
-    git
     slack
-    ripgrep
     lsof
     fd
-    tmux
     zoom-us
     stow
     elvish
     zoxide
-    exa
     go
     xsel
     xclip
     rclone
     signal-desktop
     kgpg
-    bat
-    du-dust
     gparted
     aws-vault
     google-cloud-sdk
@@ -179,26 +309,35 @@
     libsForQt5.kwallet
     libsForQt5.kate
     libsForQt5.krdc
-    nssmdns
-    shairport-sync
-    cool-retro-term
     libsForQt5.bismuth
+    libsForQt5.konqueror
+    shairport-sync
+    vokoscreen-ng
+    mpv
+    arcan.ffmpeg
+    shotcut
+    sx
+    du-dust
+    weylus
+    powertop
+    cpupower-gui
+    configure-gtk
+    dbus-sway-environment
   ]) ++ (with import <unstable> {}; [
   ]);
-  # https://discourse.nixos.org/t/plasma-wayland-session-not-available-from-sddm/13447
-  services.xserver.displayManager.sddm.settings.Wayland.SessionDir = "${pkgs.plasma5Packages.plasma-workspace}/share/wayland-sessions";
+
+  # SLACK!
+  nixpkgs.config.allowUnfree = true;
 
   fonts.fonts = with pkgs; [
     (nerdfonts.override { fonts = [ "FiraCode" "DroidSansMono" ]; })
     cozette
   ];
+#+end_src
 
-  # SLACK!
-  nixpkgs.config.allowUnfree = true; 
-
-  nixpkgs.overlays = [
-  ];
-
+** extra user programs
+TODO: do I still need those?
+#+begin_src nix
   # Some programs need SUID wrappers, can be configured further or are
   # started in user sessions.
   programs.mtr.enable = true;
@@ -207,7 +346,10 @@
     enableSSHSupport = true;
   };
   programs.ssh.startAgent = false;
+ #+end_src
 
+** nix-direnv
+#+begin_src nix
   # https://github.com/nix-community/nix-direnv#via-configurationnix-in-nixos
   # at least until I have home-manager working properly :)
   # nix options for derivations to persist garbage collection
@@ -221,38 +363,9 @@
   environment.pathsToLink = [
     "/share/nix-direnv"
   ];
-
-  # List services that you want to enable:
-
-  # https://nixos.wiki/wiki/Yubikey
-  services.udev.packages = [ pkgs.yubikey-personalization ];
-
-  services.pcscd.enable = true;
-
-  services.keybase.enable = true;
-
-  # Enable the OpenSSH daemon.
-  # services.openssh.enable = true;
-
-  # Open ports in the firewall.
-  networking.firewall = {
-    allowedTCPPorts = [
-       6001 # shairport
-       631 # avahi
-       ];
-
-    allowedUDPPortRanges = [
-      { from = 6001; to = 6199; } # shairport
-    ];
-
-    allowedUDPPorts = [
-      5353 # avahi
-      631 # avahi
-    ];
-  };
-  # Or disable the firewall altogether.
-  # networking.firewall.enable = false;
-  
+#+end_src
+** openGL
+#+begin_src nix
   # https://nixos.wiki/wiki/Accelerated_Video_Playback
   nixpkgs.config.packageOverrides = pkgs: {
     vaapiIntel = pkgs.vaapiIntel.override { enableHybridCodec = true; };
@@ -267,7 +380,10 @@
       libvdpau-va-gl
     ];
   };
+ #+end_src
 
+** system version
+#+begin_src nix
   # This value determines the NixOS release from which the default
   # settings for stateful data, like file locations and database versions
   # on your system were taken. It‘s perfectly fine and recommended to leave
@@ -275,6 +391,9 @@
   # Before changing this value read the documentation for this option
   # (e.g. man configuration.nix or on https://nixos.org/nixos/options.html).
   system.stateVersion = "21.11"; # Did you read the comment?
+ #+end_src
 
+** the end
+#+begin_src nix
 }
-
+#+end_src
