--- a/platform-specific/nixos/configuration.org
+++ b/platform-specific/nixos/configuration.org
@@ -10,45 +10,7 @@
 #+begin_src nix
 { config, lib, pkgs, grub2-themes, ... }:
 
-let
-# bash script to let dbus know about important env variables and
-# propogate them to relevent services run at the end of sway config
-# see
-# https://github.com/emersion/xdg-desktop-portal-wlr/wiki/"It-doesn't-work"-Troubleshooting-Checklist
-# note: this is pretty much the same as  /etc/sway/config.d/nixos.conf but also restarts
-# some user services to make sure they have the correct environment variables
-dbus-sway-environment = pkgs.writeTextFile {
-  name = "dbus-sway-environment";
-  destination = "/bin/dbus-sway-environment";
-  executable = true;
-
-  text = ''
-  dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
-  systemctl --user stop pipewire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr
-  systemctl --user start pipewire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr
-      '';
-};
-
-# currently, there is some friction between sway and gtk:
-# https://github.com/swaywm/sway/wiki/GTK-3-settings-on-Wayland
-# the suggested way to set gtk settings is with gsettings
-# for gsettings to work, we need to tell it where the schemas are
-# using the XDG_DATA_DIR environment variable
-# run at the end of sway config
-configure-gtk = pkgs.writeTextFile {
-  name = "configure-gtk";
-  destination = "/bin/configure-gtk";
-  executable = true;
-  text = let
-    schema = pkgs.gsettings-desktop-schemas;
-    datadir = "${schema}/share/gsettings-schemas/${schema.name}";
-  in ''
-        export XDG_DATA_DIRS=${datadir}:$XDG_DATA_DIRS
-        gnome_schema=org.gnome.desktop.interface
-        gsettings set $gnome_schema gtk-theme 'Dracula'
-        '';
-};
-in {
+{
   imports =
     [ # Include the results of the hardware scan.
       ./hardware-configuration.nix
@@ -189,8 +151,18 @@ TODO: 22.05 introduced native support, no need to roll own user :)
   services.printing.enable = true;
 
   # Enable sound.
-  sound.enable = true;
-  hardware.pulseaudio.enable = true;
+  sound.enable = false;
+  hardware.pulseaudio.enable = false;
+  # https://nixos.wiki/wiki/PipeWire
+  security.rtkit.enable = true;
+  services.pipewire = {
+    enable = true;
+    alsa.enable = true;
+    alsa.support32Bit = true;
+    pulse.enable = true;
+    # If you want to use JACK applications, uncomment this
+    #jack.enable = true;
+  };
 
   # https://nixos.wiki/wiki/Printing - for shairport
   services.avahi.enable = true;
@@ -240,6 +212,63 @@ xdg.portal = {
   # gtk portal needed to make gtk apps happy
   extraPortals = [ pkgs.xdg-desktop-portal-gtk ];
 };
+
+environment.etc."sway/config.d/extras.conf".source = let
+# bash script to let dbus know about important env variables and
+# propogate them to relevent services run at the end of sway config
+# see
+# https://github.com/emersion/xdg-desktop-portal-wlr/wiki/"It-doesn't-work"-Troubleshooting-Checklist
+# note: this is pretty much the same as  /etc/sway/config.d/nixos.conf but also restarts
+# some user services to make sure they have the correct environment variables
+dbus-sway-environment = pkgs.writeTextFile {
+  name = "dbus-sway-environment";
+  destination = "/bin/dbus-sway-environment";
+  executable = true;
+
+  text = ''
+  dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+  systemctl --user stop pipewire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr
+  systemctl --user start pipewire pipewire-media-session xdg-desktop-portal xdg-desktop-portal-wlr
+      '';
+};
+
+configure-qt = pkgs.writeTextFile {
+  name = "configure-qt";
+  destination = "/bin/configure-qt";
+  executable = true;
+  text = let
+  in ''
+        export QT_QPA_PLATFORM=wayland
+        export QT_WAYLAND_DISABLE_WINDOWDECORATION=1
+        export QT_QPA_PLATFORMTHEME=qt5ct
+        '';
+};
+
+# currently, there is some friction between sway and gtk:
+# https://github.com/swaywm/sway/wiki/GTK-3-settings-on-Wayland
+# the suggested way to set gtk settings is with gsettings
+# for gsettings to work, we need to tell it where the schemas are
+# using the XDG_DATA_DIR environment variable
+# run at the end of sway config
+configure-gtk = pkgs.writeTextFile {
+  name = "configure-gtk";
+  destination = "/bin/configure-gtk";
+  executable = true;
+  text = let
+    schema = pkgs.gsettings-desktop-schemas;
+    datadir = "${schema}/share/gsettings-schemas/${schema.name}";
+  in ''
+        export XDG_DATA_DIRS=${datadir}:$XDG_DATA_DIRS
+        gnome_schema=org.gnome.desktop.interface
+        gsettings set $gnome_schema gtk-theme 'Dracula'
+        '';
+};
+in
+  pkgs.writeText "extras.conf" ''
+    exec ${configure-gtk}/bin/configure-gtk
+    exec ${configure-qt}/bin/configure-qt
+    exec ${dbus-sway-environment}/bin/dbus-sway-environment
+    '';
 #+end_src
 ** users
 #+begin_src nix
@@ -312,7 +341,7 @@ xdg.portal = {
     libsForQt5.kate
     libsForQt5.krdc
     libsForQt5.bismuth
-    libsForQt5.konqueror
+    libsForQt5.qt5ct
     shairport-sync
     vokoscreen-ng
     mpv
@@ -322,8 +351,6 @@ xdg.portal = {
     weylus
     powertop
     cpupower-gui
-    configure-gtk
-    dbus-sway-environment
   ]) ++ (with import <unstable> {}; [
   ]);
 
