port monitor.sh to ddcutil

--- a/platform-specific/nixos/configuration.org
+++ b/platform-specific/nixos/configuration.org
@@ -299,6 +299,7 @@ xdg.portal = {
     # modify external screen brightness
     brightnessctl
     ddcutil
+    ddcui
     # soundcontrol
     pavucontrol
     # gsettings
