--- a/platform-specific/nixos/configuration.org
+++ b/platform-specific/nixos/configuration.org
@@ -31,6 +31,9 @@
       font = "${pkgs.hack-font}/share/fonts/hack/Hack-Regular.ttf";
       fontSize = 20;
   };
+  boot.loader.grub2-theme = {
+      theme = "whitesur";
+  };
   boot.loader.efi.efiSysMountPoint = "/boot/efi";
   boot.kernelPackages = pkgs.linuxPackages_latest;
   boot.kernelParams = [ "mem_sleep_default=deep" ];
