--- a/platform-specific/nixos/configuration.org
+++ b/platform-specific/nixos/configuration.org
@@ -209,11 +209,12 @@ TODO: 22.05 introduced native support, no need to roll own user :)
 *** Display Manager
 #+begin_src nix
   # Enable the Plasma 5 Desktop Environment.
-  # services.xserver.displayManager.sddm.enable = true;
+  services.xserver.displayManager.sddm.enable = true;
   services.xserver.desktopManager.plasma5.enable = true;
+  services.xserver.enable = true;
   # services.xserver.desktopManager.lxqt.enable = true;
   # disable the default
-  services.xserver.displayManager.lightdm.enable = false;
+  # services.xserver.displayManager.lightdm.enable = false;
   services.greetd = {
     settings = {
       default_session = {
