adjust to new grub2-themes API

--- a/platform-specific/nixos/configuration.org
+++ b/platform-specific/nixos/configuration.org
@@ -14,7 +14,7 @@
   imports =
     [ # Include the results of the hardware scan.
       ./hardware-configuration.nix
-      grub2-themes.nixosModule
+      grub2-themes.nixosModules.default
     ];
 #+end_src
 ** boot
